...
                .verticalScroll(rememberScrollState())
        ) {

            ValidationTextField(
                valueState = email,
                validationState = emailValidation,
                label = "Email",
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("email"),
                keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Email),
                onValueChange = onEmailValueChange
            )
...
                enabled = loginButtonEnable,
                loading = loading,
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("login"),
                onClick = onLoginButtonClick,
                label = "Login"
            )

            TextButton(onClick = onRegisterClick) {
                Text("Don't have an account? Register")
            }
        }
...
