...
@Composable
fun ValidationPasswordTextField(
    valueState: StateFlow<String>,
    validationState: StateFlow<ValidationResult>,
    onValueChange: (String) -> Unit,
    modifier: Modifier = Modifier,
    label: String = "Password",
    leadingIcon: @Composable (() -> Unit)? = null,
) {
    val value by valueState.collectAsState()
    val validation by validationState.collectAsState()
    var isPasswordVisible by remember {
        mutableStateOf(false)
...
